--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
             <div class="showCase-slide">
                 <div class="showCase full-h showCase_01">
                     <div class="left por full-h">
-                        <a class="caseBg full-h" href="#">
+                        <a class="caseBg full-h" href="https://www.youtube.com/watch?v=NrmLPaJE88o">
                             <div class="play"><img src="img/svg/play.svg" /></div>
                         </a>
                     </div>
