--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <section class="marketing full-h">
             <div class="outer">
                 <h2 class="org">數位行銷整合</h2>
-                <div class="carouselBox wow flipInY">
+                <div class="carouselBox">
                     <div class="circle--slider">
                         <div class="rotate--circle">
                             <ul class="circle--rotate" id="circle--rotate">
