--- a/index.html
+++ b/index.html
@@ -135,89 +135,91 @@
         <!--what we do-->
         <section class="marketing full-h">
             <div class="outer">
-                <h2 class="org">數位行銷整合</h2>
-                <div class="carouselBox">
-                    <div class="circle--slider">
-                        <div class="rotate--circle">
-                            <ul class="circle--rotate" id="circle--rotate">
-                                <li class="block" data-img="media">
-                                    <div class="icon"><i class="iconBox"><img src="img/svg/icon-media.svg"/></i><span> </span></div>
-                                </li>
-                                <li class="block" data-img="digital">
-                                    <div class="icon"><i class="iconBox"><img src="img/svg/icon-digital.svg"/></i><span> </span></div>
-                                </li>
-                                <li class="block" data-img="analysis">
-                                    <div class="icon"><i class="iconBox"><img src="img/svg/icon-analysis.svg"/></i><span> </span></div>
-                                </li>
-                                <li class="block" data-img="content">
-                                    <div class="icon"><i class="iconBox"><img src="img/svg/icon-content.svg"/></i><span> </span></div>
-                                </li>
-                                <li class="block" data-img="web">
-                                    <div class="icon"><i class="iconBox"><img src="img/svg/icon-web.svg"/></i><span> </span></div>
-                                </li>
-                                <li class="block" data-img="video">
-                                    <div class="icon"><i class="iconBox"><img src="img/svg/icon-video.svg"/></i><span> </span></div>
-                                </li>
-                            </ul>
-                            <div class="animate-wrapper">
-                                <div class="animate">
-                                    <div class="animate-more">
-                                        <div class="animate-title">
-                                            <h4>媒體整合行銷</h4>
-                                            <h5>Media</h5>
+                <h2 class="org wow fadeInUp">數位行銷整合</h2>
+                <div class="wow flipInY">
+                    <div class="carouselBox">
+                        <div class="circle--slider">
+                            <div class="rotate--circle">
+                                <ul class="circle--rotate" id="circle--rotate">
+                                    <li class="block" data-img="media">
+                                        <div class="icon"><i class="iconBox"><img src="img/svg/icon-media.svg"/></i><span> </span></div>
+                                    </li>
+                                    <li class="block" data-img="digital">
+                                        <div class="icon"><i class="iconBox"><img src="img/svg/icon-digital.svg"/></i><span> </span></div>
+                                    </li>
+                                    <li class="block" data-img="analysis">
+                                        <div class="icon"><i class="iconBox"><img src="img/svg/icon-analysis.svg"/></i><span> </span></div>
+                                    </li>
+                                    <li class="block" data-img="content">
+                                        <div class="icon"><i class="iconBox"><img src="img/svg/icon-content.svg"/></i><span> </span></div>
+                                    </li>
+                                    <li class="block" data-img="web">
+                                        <div class="icon"><i class="iconBox"><img src="img/svg/icon-web.svg"/></i><span> </span></div>
+                                    </li>
+                                    <li class="block" data-img="video">
+                                        <div class="icon"><i class="iconBox"><img src="img/svg/icon-video.svg"/></i><span> </span></div>
+                                    </li>
+                                </ul>
+                                <div class="animate-wrapper">
+                                    <div class="animate">
+                                        <div class="animate-more">
+                                            <div class="animate-title">
+                                                <h4>媒體整合行銷</h4>
+                                                <h5>Media</h5>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="animate">
+                                        <div class="animate-more">
+                                            <div class="animate-title">
+                                                <h4>數位操作規劃</h4>
+                                                <h5>Digital</h5>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="animate">
+                                        <div class="animate-more">
+                                            <div class="animate-title">
+                                                <h4>數據分析優化</h4>
+                                                <h5>Analysis</h5>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="animate">
+                                        <div class="animate-more">
+                                            <div class="animate-title">
+                                                <h4>內容行銷規劃</h4>
+                                                <h5>Content</h5>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="animate">
+                                        <div class="animate-more">
+                                            <div class="animate-title">
+                                                <h4>網站建置管理</h4>
+                                                <h5>Website</h5>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="animate">
+                                        <div class="animate-more">
+                                            <div class="animate-title">
+                                                <h4>影像故事製作</h4>
+                                                <h5>Video</h5>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="animate">
-                                    <div class="animate-more">
-                                        <div class="animate-title">
-                                            <h4>數位操作規劃</h4>
-                                            <h5>Digital</h5>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="animate">
-                                    <div class="animate-more">
-                                        <div class="animate-title">
-                                            <h4>數據分析優化</h4>
-                                            <h5>Analysis</h5>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="animate">
-                                    <div class="animate-more">
-                                        <div class="animate-title">
-                                            <h4>內容行銷規劃</h4>
-                                            <h5>Content</h5>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="animate">
-                                    <div class="animate-more">
-                                        <div class="animate-title">
-                                            <h4>網站建置管理</h4>
-                                            <h5>Website</h5>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="animate">
-                                    <div class="animate-more">
-                                        <div class="animate-title">
-                                            <h4>影像故事製作</h4>
-                                            <h5>Video</h5>
-                                        </div>
-                                    </div>
-                                </div>
+                                <div class="prev" v-show="false"><span>PREV</span></div>
+                                <div class="next" v-show="false"><span>NEXT</span></div>
                             </div>
-                            <div class="prev" v-show="false"><span>PREV</span></div>
-                            <div class="next" v-show="false"><span>NEXT</span></div>
                         </div>
-                    </div>
-                    <div class="logo abs"><img src="img/svg/logo_en.svg" />
-                    </div>
-                    <!--change the bg-icon with carous-->
-                    <div class="bg-icon abs"><img src="img/svg/icon-media.svg" />
-                        <!-- 'icon-media','icon-digital','icon-analysis','icon-content','icon-web','icon-video'-->
+                        <div class="logo abs"><img src="img/svg/logo_en.svg" />
+                        </div>
+                        <!--change the bg-icon with carous-->
+                        <div class="bg-icon abs"><img src="img/svg/icon-media.svg" />
+                            <!-- 'icon-media','icon-digital','icon-analysis','icon-content','icon-web','icon-video'-->
+                        </div>
                     </div>
                 </div>
             </div>
@@ -284,8 +286,8 @@
                 <div class="video full-h">
                     <div class="main">
                         <div class="work-tt">
-                            <h2 class="org">我們的作品</h2>
-                            <p>設計 + 多元版型組合 + 持續強化的系統功能 + 專案管理流程 </p>
+                            <h2 class="org wow fadeInUp">我們的作品</h2>
+                            <p class="wow fadeInUp">設計 + 多元版型組合 + 持續強化的系統功能 + 專案管理流程 </p>
                         </div>
                         <div class="desBox">
                             <!--work1-->
@@ -371,8 +373,8 @@
         </section>
         <!--rwd-->
         <section class="rwd full-h">
-            <span class="wow fadeInUp">
-            <h2>響應式設計</h2>
+            <span>
+            <h2 class="wow fadeInUp">響應式設計</h2>
           </span>
             <div class="device abs">
                 <div class="phone abs wow fadeInRight" data-wow-delay=".35s">
@@ -460,34 +462,34 @@
             <div class="slideBox">
                 <div class="logoBox">
                     <ul>
-                        <li class="wow rollIn" data-wow-delay="0s"><img src="img/client-far.png" />
+                        <li class="wow flipInY" data-wow-delay="0s"><img src="img/client-far.png" />
                         </li>
-                        <li class="wow rollIn" data-wow-delay=".1s"><img src="img/client-yuan.png" />
+                        <li class="wow flipInY" data-wow-delay=".1s"><img src="img/client-yuan.png" />
                         </li>
-                        <li class="wow rollIn" data-wow-delay=".2s"><img src="img/client-yuan.png" />
+                        <li class="wow flipInY" data-wow-delay=".2s"><img src="img/client-yuan.png" />
                         </li>
-                        <li class="wow rollIn" data-wow-delay=".3s"><img src="img/client-far.png" />
+                        <li class="wow flipInY" data-wow-delay=".3s"><img src="img/client-far.png" />
                         </li>
-                        <li class="wow rollIn" data-wow-delay=".4s"><img src="img/client-yuan.png" />
+                        <li class="wow flipInY" data-wow-delay=".4s"><img src="img/client-yuan.png" />
                         </li>
-                        <li class="wow rollIn" data-wow-delay=".5s"><img src="img/client-far.png" />
+                        <li class="wow flipInY" data-wow-delay=".5s"><img src="img/client-far.png" />
                         </li>
                     </ul>
                 </div>
                 <!-- 預留logo DIV -->
                 <div class="logoBox">
                     <ul>
-                        <li class="wow rollIn" data-wow-delay="0"><img src="img/client-far.png" />
+                        <li class="wow flipInY" data-wow-delay="0"><img src="img/client-far.png" />
                         </li>
-                        <li class="wow rollIn" data-wow-delay=".1s"><img src="img/client-yuan.png" />
+                        <li class="wow flipInY" data-wow-delay=".1s"><img src="img/client-yuan.png" />
                         </li>
-                        <li class="wow rollIn" data-wow-delay=".2s"><img src="img/client-yuan.png" />
+                        <li class="wow flipInY" data-wow-delay=".2s"><img src="img/client-yuan.png" />
                         </li>
-                        <li class="wow rollIn" data-wow-delay=".3s"><img src="img/client-far.png" />
+                        <li class="wow flipInY" data-wow-delay=".3s"><img src="img/client-far.png" />
                         </li>
-                        <li class="wow rollIn" data-wow-delay=".4s"><img src="img/client-yuan.png" />
+                        <li class="wow flipInY" data-wow-delay=".4s"><img src="img/client-yuan.png" />
                         </li>
-                        <li class="wow rollIn" data-wow-delay=".5s"><img src="img/client-far.png" />
+                        <li class="wow flipInY" data-wow-delay=".5s"><img src="img/client-far.png" />
                         </li>
                     </ul>
                 </div>
@@ -495,7 +497,7 @@
         </section>
         <!--contact-->
         <section class="contact">
-            <p class="hello abs wow fadeInUp">HELLO</p>
+            <p class="hello abs wow fadeInLeft">HELLO</p>
             <div class="main">
                 <div class="infoBox">
                     <div class="info wow fadeInUp">
