--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- css style-->
     <link rel="stylesheet" href="css/style.css">
     <!--if gt IE 9-->
-    <script src="https://maps.googleapis.com/maps/api/js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key="></script>
     <script src="vendor/html5shiv.js"></script>
     <script src="vendor/isMobile.min.js"></script>
     <script src="vendor/TweenMax.min.js"></script>
