updated wow and contact effects

--- a/index.html
+++ b/index.html
@@ -285,9 +285,9 @@
             <div class="slideBox">
                 <div class="video full-h">
                     <div class="main">
-                        <div class="work-tt">
-                            <h2 class="org wow fadeInUp">我們的作品</h2>
-                            <p class="wow fadeInUp">設計 + 多元版型組合 + 持續強化的系統功能 + 專案管理流程 </p>
+                        <div class="work-tt wow fadeInUp">
+                            <h2 class="org">我們的作品</h2>
+                            <p>設計 + 多元版型組合 + 持續強化的系統功能 + 專案管理流程 </p>
                         </div>
                         <div class="desBox">
                             <!--work1-->
@@ -419,7 +419,7 @@
                             <div class="play"><img src="img/svg/play.svg" /></div>
                         </a>
                     </div>
-                    <div class="right por">
+                    <div class="right por wow fadeInUp">
                         <div class="showSlick">
                             <div>
                                 <div class="main">
