--- a/work.html
+++ b/work.html
@@ -61,7 +61,7 @@
               <li><a class="line" href="index.html">回首頁</a></li>
               <li><a class="active">作品集</a>
               </li>
-              <li @click.prevent="ctrlMove('.contact', true);"><a class="line" href="#">聯絡我們</a></li>
+              <li><a class="line" href="index.html?tab=contact">聯絡我們</a></li>
               <li><a class="line" href="https://www.104.com.tw/jobbank/custjob/index.php?r=cust&j=3e4c446d3638406932343c653a40381b82b2b2b284438382664j01" target="_blank">菁英招募</a></li>
             </ul>
             <ul class="social">
@@ -76,7 +76,7 @@
             <li><a class="line" href="index.html">回首頁</a></li>
             <li><a class="active">作品集</a>
             </li>
-            <li @click.prevent="ctrlMove('.contact', true);"><a class="line" href="#">聯絡我們</a></li>
+            <li><a class="line" href="index.html?tab=contact">聯絡我們</a></li>
             <li><a class="line" href="https://www.104.com.tw/jobbank/custjob/index.php?r=cust&amp;j=3e4c446d3638406932343c653a40381b82b2b2b284438382664j01" target="_blank">菁英招募</a></li>
           </ul>
           <ul class="social">
