--- a/index.html
+++ b/index.html
@@ -373,9 +373,7 @@
         </section>
         <!--rwd-->
         <section class="rwd full-h">
-            <span>
-            <h2 class="wow fadeInUp">響應式設計</h2>
-          </span>
+            <h2><p class="wow fadeInUp">響應式設計</p></h2>
             <div class="device abs">
                 <div class="phone abs wow fadeInRight" data-wow-delay=".35s">
                     <div class="cover por"><img src="img/rwd-phone.png" />
